--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/inmobiliaria/assets/logo.69341e09.svg" />
+    <link rel="icon" type="image/svg+xml" href="/assets/logo.ac0bc785.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Inmoviliaria</title>
-    <script type="module" crossorigin src="/inmobiliaria/assets/index.c4748970.js"></script>
-    <link rel="stylesheet" href="/inmobiliaria/assets/index.85b593eb.css">
+    <script type="module" crossorigin src="/assets/index.a34b56e7.js"></script>
+    <link rel="stylesheet" href="/assets/index.bf8ec5c2.css">
   </head>
   <body>
     <div id="root"></div>
