--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://geoguncay.github.io/inmobiliaria/assets/logo.ac0bc785.svg" />
+    <link rel="icon" type="image/svg+xml" href="/inmobiliaria/assets/logo.ac0bc785.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Inmoviliaria</title>
-    <script type="module" crossorigin src="https://geoguncay.github.io/inmobiliaria/assets/index.a34b56e7.js"></script>
-    <link rel="stylesheet" href="https://geoguncay.github.io/inmobiliaria/assets/index.d2c9e7e0.css">
+    <script type="module" crossorigin src="/inmobiliaria/assets/index.5286df25.js"></script>
+    <link rel="stylesheet" href="/inmobiliaria/assets/index.adc818ad.css">
   </head>
   <body>
     <div id="root"></div>
